--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -9,6 +9,11 @@ sv:
       settings: Sociala delningsinställningar
       service_settings: Serviceinställningar
       facebook_settings: Facebookinställningar
+      buttons:
+        delicious: Delicious
+        submit_to_reddit:
+        share_on_tumblr:
+        tweet:
       preferences:
         service_button: '%{service} knapp'
         facebook_layout: Knapptyp
