--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -11,9 +11,9 @@ sv:
       facebook_settings: Facebookinställningar
       buttons:
         delicious: Delicious
-        submit_to_reddit:
-        share_on_tumblr:
-        tweet:
+        submit_to_reddit: Dela på Reddit
+        share_on_tumblr: Dela på Tumblr
+        tweet: Tvittra
       preferences:
         service_button: '%{service} knapp'
         facebook_layout: Knapptyp
